--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="intro-container">
         <h1>Welcome to Environmental Tech Stewardship!</h1>
         <p>In today’s digital age, computers are essential to our daily lives, but they also contribute to significant environmental problems. From the production of raw materials to the disposal of electronic waste (e-waste), computers have a negative impact on our planet. This website will explore the hidden costs of our digital world and what can be done to make it more sustainable.</p>
-        
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ32D74OqntP4qg9jcfHTcBAk7DRw9_eE17xg&s" alt="">
         <div class="key-focus">
             <h2>Key Focus Areas:</h2>
             <ul>
