--- a/impact.html
+++ b/impact.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - codingnepalweb.com -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,7 +11,7 @@
     <!-- ===== Boxicons CSS ===== -->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 
-     <title>CS Task #2 FW24- website</title>
+    <title>CS Task #2 FW24 - Website</title>
 </head>
 <body>
     <nav>
@@ -32,6 +31,7 @@
                     <li><a href="solution.html">Solutions</a></li>
                     <li><a href="tech.html">Tech</a></li>
                     <li><a href="recycle.html">Recycle</a></li>
+                    <li><a href="initiatives.html">Initiatives</a></li>
                 </ul>
             </div>
 
@@ -71,7 +71,5 @@
     </div>
     
     <script src="scripts.js"></script>
-
-
 </body>
 </html>
