--- a/tech.html
+++ b/tech.html
@@ -32,6 +32,7 @@
                     <li><a href="solution.html">Solutions</a></li>
                     <li><a href="tech.html">Tech</a></li>
                     <li><a href="recycle.html">Recycle</a></li>
+                    <li><a href="initiatives.html">Initiatives</a></li>
                 </ul>
             </div>
 
