--- a/recycle.html
+++ b/recycle.html
@@ -31,6 +31,7 @@
                     <li><a href="solution.html">Solutions</a></li>
                     <li><a href="tech.html">Tech</a></li>
                     <li><a href="recycle.html">Recycle</a></li>
+                    <li><a href="initiatives.html">Initiatives</a></li>
                 </ul>
             </div>
 
